[package]
name = "sev"
version = "1.2.1"
authors = [
    "Nathaniel McCallum <npmccallum@redhat.com>",
    "The VirTee Project Developers",
]
license = "Apache-2.0"
edition = "2018"
homepage = "https://github.com/virtee/sev"
repository = "https://github.com/virtee/sev"
description = "Library for AMD SEV"
readme = "README.md"
keywords = ["amd", "sev"]
categories = [
    "os",
    "os::linux-apis",
    "parsing",
    "network-programming",
    "hardware-support",
]
exclude = [".gitignore", ".github/*"]
rust-version = "1.66.1"

[badges]
# See https://doc.rust-lang.org/cargo/reference/manifest.html#the-badges-section
github = { repository = "virtee/sev", workflow = "test" }
#github = { repository = "virtee/sev", workflow = "lint" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "virtee/sev" }
is-it-maintained-open-issues = { repository = "virtee/sev" }

[lib]
crate-type = ["staticlib", "dylib", "rlib"]
name = 'sev'
path = "src/lib.rs"
doc = false

[features]
default = ["sev", "snp"]
hw_tests = []
dangerous_hw_tests = ["hw_tests"]
sev = []
snp = []

[target.'cfg(target_os = "linux")'.dependencies]
iocuddle = "0.1"

[dependencies]
openssl = { version = "0.10", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
bitflags = "1.2"
codicon = "3.0"
dirs = "5.0"
serde-big-array = "0.5.1"
static_assertions = "^1.1.0"
bitfield = "^0.13"
uuid = { version = "^1.2", features = ["serde"] }
bincode = "^1.3"
hex = "0.4.3"
libc = "0.2.147"
lazy_static = "1.4.0"

[dev-dependencies]
kvm-ioctls = ">=0.12"
kvm-bindings = ">=0.6"
serial_test = "2.0"
