[package]
name = "sev"
version = "7.0.0"
authors = [
    "Nathaniel McCallum <npmccallum@redhat.com>",
    "The VirTEE Project Developers",
]
license = "Apache-2.0"
edition = "2018"
homepage = "https://github.com/virtee/sev"
repository = "https://github.com/virtee/sev"
description = "Library for AMD SEV"
readme = "README.md"
keywords = ["amd", "sev"]
categories = [
    "os",
    "os::linux-apis",
    "parsing",
    "network-programming",
    "hardware-support",
]
exclude = [".gitignore", ".github/*"]
rust-version = "1.85.0"

[badges]
# See https://doc.rust-lang.org/cargo/reference/manifest.html#the-badges-section
github = { repository = "virtee/sev", workflow = "test" }
#github = { repository = "virtee/sev", workflow = "lint" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "virtee/sev" }
is-it-maintained-open-issues = { repository = "virtee/sev" }

[lib]
name = 'sev'
path = "src/lib.rs"
doc = false

[features]
default = ["sev", "snp", "openssl?/vendored"]
openssl = ["dep:openssl"]
hw_tests = []
dangerous_hw_tests = ["hw_tests", "dep:reqwest", "dep:tokio"]
sev = ["dep:rdrand"]
snp = []
crypto_nossl = ["dep:p384", "dep:rsa", "dep:sha2", "dep:x509-cert"]
serde = ["dep:serde", "dep:serde-big-array"]

[target.'cfg(target_os = "linux")'.dependencies]
iocuddle = "^0.1"

[dependencies]
openssl = { version = "0.10", optional = true }
serde = { version = "1.0", features = ["derive"] , optional = true}
bitflags = "2.9.0"
dirs = "^6.0"
serde-big-array = {version = "0.5.1", optional = true}
static_assertions = "^1.1.0"
bitfield = "^0.19"
uuid = { version = "^1.11", features = ["serde"] }
hex = "0.4.3"
libc = "0.2.172"
lazy_static = "1.4.0"
p384 = { version = "0.13.0", optional = true }
rsa = { version = "0.9.6", optional = true }
sha2 = { version = "0.10.9", optional = true }
x509-cert = { version = "0.2.5", optional = true }
byteorder = "1.4.3"
base64 = "0.22.1"
rdrand = { version = "^0.8", optional = true }
reqwest = { version = "^0.12", features = ["blocking"], optional = true }
tokio = { version = "1.29.1", features = ["rt-multi-thread"], optional = true }

[target.'cfg(target_os = "linux")'.dev-dependencies]
kvm-ioctls = ">=0.16"
kvm-bindings = "^0.11"

[dev-dependencies]
serial_test = "3.0"
